{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 35,
  "lineage": "1a36399a-482d-a1ff-5531-6d23dccd9dfe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09c813fb71547fc4f",
            "arn": "arn:aws:ec2:us-east-1:548775194773:instance/i-0dfde9239b6912d3d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dfde9239b6912d3d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0db6509500c006626"
              }
            ],
            "primary_network_interface_id": "eni-0db6509500c006626",
            "private_dns": "ip-172-31-21-165.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.21.165",
            "public_dns": "ec2-44-223-62-31.compute-1.amazonaws.com",
            "public_ip": "44.223.62.31",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-098416e8f98eb4fd9",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_all_terraform"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09ca173691a2eff3c",
            "tags": {
              "Name": "mongo"
            },
            "tags_all": {
              "Name": "mongo"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ede95de4ce0ccefe"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "548775194773",
            "id": "i-0dfde9239b6912d3d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_all_terraform",
            "data.aws_ami.join-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:548775194773:security-group/sg-0ede95de4ce0ccefe",
            "description": "Allow all inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0ede95de4ce0ccefe",
            "ingress": [],
            "name": "allow_all_terraform",
            "name_prefix": "",
            "owner_id": "548775194773",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all_terraform"
            },
            "tags_all": {
              "Name": "allow_all_terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e4c9eb52dea4ac5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "548775194773",
            "id": "sg-0ede95de4ce0ccefe",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:548775194773:security-group-rule/sgr-0f4a1d3ef285608a2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0f4a1d3ef285608a2",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ede95de4ce0ccefe",
            "security_group_rule_id": "sgr-0f4a1d3ef285608a2",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "548775194773",
            "id": "sgr-0f4a1d3ef285608a2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_all_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:548775194773:security-group-rule/sgr-02db31b8761367edc",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-02db31b8761367edc",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ede95de4ce0ccefe",
            "security_group_rule_id": "sgr-02db31b8761367edc",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "548775194773",
            "id": "sgr-02db31b8761367edc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_all_terraform"
          ]
        }
      ]
    }
  ]
}